# digital_interface_msgs

./: CMakeLists.txt  LICENSE  README.md  package.xml
msg/: OnePinConfig.msg  RaspiConfig.msg  digital_state.msg
srv/: ConfigRead.srv  ConfigSet.srv  PWMWrite.srv  PinStateRead.srv  PinStateWrite.srv  ReadState.srv  read_state.srv
