<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>digital_interface_msgs</name>
  <version>0.2.0</version>
  <description>TODO: Package description</description>
 
  
    <author email="timotej.gaspar@ijs.si">Timotej Gaspar</author>
  <maintainer email="timotej.gaspar@ijs.si">Timotej Gaspar</maintainer>
  <maintainer email="rok.pahic@ijs.si">Rok Pahic</maintainer>
  
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

<build_depend>rosidl_default_generators</build_depend>

<exec_depend>rosidl_default_runtime</exec_depend>
<member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
